<resources>
    <string name="app_name">Compra Aqui</string>
    <string name="title_activity_principal__drawer">Principal_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_session">Iniciar Sessión</string>
    <string name="menu_localizacion">Localización</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_perfil">Perfil</string>
    <string name="comida_Rapida">COMIDA RAPIDA</string>
    <string name="comida_Tipica">COMIDA TIPICA</string>
    <string name="comida_ejecutiva">COMIDA EJECUTIVA</string>
    <string name="pasteleria">PASTERLERIA</string>
    <string name="bebidas">BEBIDAS</string>
    <string name="Menu_suario">Usuario</string>
    <string name="Menu_nombre">Juan Perez</string>

    <string name="belleza1">MAQUILLAJES</string>
    <string name="belleza2">SHAMPOO</string>
    <string name="belleza3">CREMAS</string>
    <string name="belleza4">TINTES</string>
    <string name="belleza5">PERFUMES</string>


    <!--
    McNerio: se tiene que usar estandares para que no halla inconsistencias, para los names de las tag
    se debe usar solo minusculas y separar por guion bajo _ como esta en el ejemplo de: app_name
    -->
    <!-- Strings de primera activity-->
    <string name="lbl_title">HubDeliver</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_later">Registrarse Luego</string>

    <!--Strings de segunda activity-->
    <string name="lbl_title_reg">Registrarse</string>
    <string name="hint_nombre_reg">Nombres</string>
    <string name="hint_password_reg">Contraseña</string>
    <string name="hint_numero_reg">Ingresar Numero</string>
    <string name="btn_aceptar_reg">Aceptar</string>

    <!--Strings de tercera activity-->
    <string name="lbl_title_login">Inicio Sesión</string>
    <string name="hint_nombre_login">Nombres</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="btn_inicio_login">Iniciar Sesión</string>
</resources>