<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_session" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_localizacion" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/menu_salir" />



    </group>
</menu>