<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.company.hubdeliver.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.company.hubdeliver.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_session"
        android:name="com.company.hubdeliver.ui.session.SessionFragment"
        android:label="@string/menu_session"
        tools:layout="@layout/fragment_session" />
    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.company.hubdeliver.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
    android:id="@+id/nav_localizacion"
    android:name="com.company.hubdeliver.ui.localizacion.LocalizacionFragment"
    android:label="@string/menu_localizacion"
    tools:layout="@layout/fragment_localizacion" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.company.hubdeliver.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />


</navigation>