<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnuno"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="1" />

                <Button
                    android:id="@+id/btndos"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="2" />

                <Button
                    android:id="@+id/btntres"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="3" />

                <Button
                    android:id="@+id/btncuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="4" />

                <Button
                    android:id="@+id/btncinco"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="5" />

                <Button
                    android:id="@+id/btnseis"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="6" />

                <Button
                    android:id="@+id/btnsiete"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="7" />

                <Button
                    android:id="@+id/btnocho"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="8" />

                <Button
                    android:id="@+id/btnnueve"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/redondplantilla"
                    android:textColor="@drawable/redondotexto"
                    android:text="9" />


            </LinearLayout>


        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/idComidaRapida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/crapida" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/comida_Rapida"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idComidaTipica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/tipica" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/comida_Tipica"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idComidaEjecutiva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ejecutiva" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/comida_ejecutiva"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idPasteleria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/pasteleria" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/pasteleria"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idBebidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/bebidas" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/bebidas"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </GridLayout>


        </ScrollView>
    </LinearLayout>

</LinearLayout>